adding missing switches