@@ -22,6 +22,9 @@
  */
 
 // key: compiler.err.return.before.superclass.initialized
+// key: compiler.note.preview.filename
+// key: compiler.note.preview.recompile
+// options: --enable-preview -source ${jdk.version}
 
 class ReturnBeforeSuperclassInit {
     ReturnBeforeSuperclassInit(boolean maybe) {
